[package]
name = "banks"
version = "0.1.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
actix-web = "4.0.1"
lambda-web = { version = "0.1.8", features = ["actix4"] }
serde_json = "1.0.79"
json = "0.12.4"
regex = "1.5.5"
log = "0.4.0"
env_logger = "0.9.0"
